feat(migration): update code and make sure unit tests are passing